--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body {
   text-align: center;
   overflow: overlay;
   background-color: var(--bg-light);
+  -webkit-font-smoothing: antialiased;
 }
 
 .wrapper {
@@ -187,19 +188,19 @@ nav .close_menu {
   text-align: left;
   display: flex;
   flex-direction: column;
-}
-.logo h1 {
-  font-family: 'Poppins', sans-serif;
-
-  margin-bottom: -0.7rem;
-  color: var(--brand-dark);
+  padding-block: 0.6rem;
 }
 .logo .name_sector {
   font-family: 'DM Sans', sans-serif;
   font-weight: 400;
+  margin-bottom: -0.8rem; 
+  color: var(--brand-dark);
+  text-shadow: 3px 2px 6px rgba(0, 0, 0, 0.425);
 }
 .logo .name_company {
+  font-family: 'Poppins', sans-serif;
   color: var(--primary-color);
+  text-shadow: 3px 2px 6px rgba(0, 0, 0, 0.425);
 }
 nav.scroll .logo h1 {
   color: white;
@@ -278,8 +279,8 @@ body.menu_expanded .menu {
   display: inline-block;
   padding: 1.6rem 3.2rem;
 
-  margin-top: 4.8rem;
-  margin-bottom: 8rem;
+  margin-top: 3.8rem;
+  margin-bottom: 4rem;
 }
 .menu .button:hover {
   background-color: var(--primary-color);
@@ -519,19 +520,22 @@ footer .social_links {
     display: flex;
     flex-direction: column;
   }
-  nav#nav .wrapper .logo h1{
-    font-family: 'Poppins', sans-serif;
-    margin-bottom: -0.7rem;
-    color: var(--brand-dark);
+  nav#nav .wrapper .logo h1,
+  nav#nav .wrapper .logo .name_company span{
+    font-size: 2.4rem;
+    
   }
   nav#nav .wrapper .logo .name_sector {
     font-family: 'DM Sans', sans-serif;
     font-weight: 400;
+    margin-bottom: -0.7rem;
+    color: var(--brand-dark);
   }
   nav#nav .wrapper .logo .name_company,
   nav#nav .wrapper .logo .name_company span {
     color: var(--primary-color);
     font-weight: 700;
+    font-family: 'Poppins', sans-serif;
   }
   nav#nav.scroll .wrapper .logo .name_sector,
   nav#nav.scroll .wrapper .logo .name_company,
